testsuite/tests/grammar/invalid_list/invalid_astlist.lkt
from common import FooNode
from lexer_example import foo_lexer

@with_lexer(foo_lexer)
grammar foo_grammar {
    @main_rule main_rule <-
      ASTList[FooNode, Example, Example]+(Example("example"))
}

class Example : FooNode implements TokenNode {
}
